# Two-Party_Two-Passes_BBS_plus

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
include/: Messages.h  Party.h  Party1.h  Party2.h  Protocol.h  Utils.h  ecvrf_test.h  global_context.h  protocol_types.h  threshold_elgamal.h  zk_sigma.h
include/bicycl/: CMakeLists.txt
include/bicycl/bicycl/: CL_HSM_utils.hpp  CL_HSM_utils.inl  CL_HSMqk.hpp  CL_HSMqk.inl  openssl_wrapper.hpp  qfi.hpp  qfi.inl
src/: Party.cpp  Party1.cpp  Party2.cpp  Protocol.cpp  Utils.cpp  bbs_benchmark.cpp  ecvrf_p256.c  ecvrf_test.c  main.cpp  run_bbs_ell_tests.sh  zk_sigma.cpp  zk_test.cpp
